fix z-index on quicklinks

--- a/source/_patterns/03-organisms/headers/wwu-header/wwu-header.scss
+++ b/source/_patterns/03-organisms/headers/wwu-header/wwu-header.scss
@@ -112,6 +112,7 @@ wwu-header {
   display: flex;
   justify-content: space-evenly;
   padding-right: var(--toggle-size--sm);
+  z-index: 1;
   .icon-with-text {
     @include breakpoint($medium) {
       place-items: center;
